--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -5,13 +5,13 @@
 // 0up
 
 // Extra Small Devices, Phones
-@media only screen and (min-width : 480px) {}
+@media only screen and (min-width : $extra-small-container-width) {}
 
 // Small Devices, Tablets
-@media only screen and (min-width : 768px) {}
+@media only screen and (min-width : $small-container-width) {}
 
 // Medium Devices, Desktops
-@media only screen and (min-width : 992px) {}
+@media only screen and (min-width : $medium-container-width) {}
 
 // Large Devices, Wide Screens
-@media only screen and (min-width : 1200px) {}
+@media only screen and (min-width : $large-container-width) {}
