--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,37 +1,40 @@
 //
 // Global Styles
 //
-
 // 0up
-
 body {
     font-family: $sans-serif;
     font-weight: 400;
     line-height: 1.6em;
     font-size: 16px;
-    h1 {
-
-    }
+    h1 {}
     h2 {
         font-family: $semibold-sans-serif;
         font-weight: 600;
         font-size: 28px;
         color: $dark-blue;
-        margin-bottom: 30px;
+        margin-bottom: 15px;
     }
     p {
         margin-bottom: 15px;
     }
+    .back-to-top {
+        cursor: pointer;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        display: none;
+    }
 }
 
 // Extra Small Devices, Phones
-@media only screen and (min-width : $extra-small-container-width) {}
+@media only screen and (min-width: $extra-small-container-width) {}
 
 // Small Devices, Tablets
-@media only screen and (min-width : $small-container-width) {}
+@media only screen and (min-width: $small-container-width) {}
 
 // Medium Devices, Desktops
-@media only screen and (min-width : $medium-container-width) {}
+@media only screen and (min-width: $medium-container-width) {}
 
 // Large Devices, Wide Screens
-@media only screen and (min-width : $large-container-width) {}
+@media only screen and (min-width: $large-container-width) {}
