--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -77,7 +77,7 @@
     }
 }
 
-.page-template-template-84-two-col-page {
+.page-child {
     background-image: url('../images/bg-optimists-takeover.png'), linear-gradient(#003d6e 100px, #1d6092 300px);
     background-repeat: no-repeat;
     background-position: top left;
@@ -114,6 +114,11 @@
                 .col-md-8,
                 .col-md-4 {
                     padding: 30px;
+                    section {
+                        p:last-child, ul:last-child {
+                            margin-bottom: 40px;
+                        }
+                    }
                 }
             }
         }
