--- a/assets/styles/layouts/_sidebar.scss
+++ b/assets/styles/layouts/_sidebar.scss
@@ -1,17 +1,45 @@
 //
 // Sidebar Styles
 //
-
 // 0up
+.sidebar-nav {
+    list-style: none;
+    padding-left: 0;
+    li {
+        font-size: 16px;
+        font-family: $sans-serif;
+        letter-spacing: .125em;
+        text-transform: uppercase;
+        border-top: 1px solid $light-blue;
+        line-height: 3em;
+        &:last-child {
+            border-bottom: 1px solid $light-blue;
+        }
+        img {
+            display: inline-block;
+            height: 18px;
+            width: 18px;
+            padding-right: 5px;
+            line-height: 3em;
+        }
+        a {
+            margin-left: 10px;
+            &:hover, &:active {
+                text-decoration: none;
+                color: $light-blue;
+            }
+        }
+    }
+}
 
 // Extra Small Devices, Phones
-@media only screen and (min-width : $extra-small-container-width) {}
+@media only screen and (min-width: $extra-small-container-width) {}
 
 // Small Devices, Tablets
-@media only screen and (min-width : $small-container-width) {}
+@media only screen and (min-width: $small-container-width) {}
 
 // Medium Devices, Desktops
-@media only screen and (min-width : $medium-container-width) {}
+@media only screen and (min-width: $medium-container-width) {}
 
 // Large Devices, Wide Screens
-@media only screen and (min-width : $large-container-width) {}
+@media only screen and (min-width: $large-container-width) {}
